# LoopUS

./: .gitignore  README.md  chat.py  evaluate.py  generate.py  pyproject.toml  test_model.py  train.py  train_sft.py  training_cli.py  training_runtime.py
ds_configs/: accelerate_ds_zero2.yaml  accelerate_ds_zero3.yaml  fsdp_config.yaml
models/: __init__.py  configuration_lds.py  modeling_lds.py
script/: eval_model.sh  train.sh
utils/: __init__.py  common.py  data.py  ddp_helper.py  inference.py  lm_eval_harness.py  metrics.py
