[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddd"
version = "0.1.0"
description = "Training and evaluation code for Deeply Decomposed Decoding (DDD) models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "deepspeed>=0.18.8; platform_system == 'Linux'",
    "flashinfer-python>=0.6.6; platform_system == 'Linux'",
    "huggingface-hub>=1.5.0",
    "lm-eval>=0.4.11",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.2",
    "safetensors>=0.4.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
    "wandb>=0.18.0",
]

[project.scripts]
LoopUS-train = "train:main"
LoopUS-train-sft = "train_sft:main"
LoopUS-eval = "evaluate:main"
LoopUS-generate = "generate:main"

[tool.setuptools]
py-modules = [
    "evaluate",
    "generate",
    "train",
    "train_sft",
    "training_cli",
    "training_runtime",
    "test_model",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models", "models.*", "utils", "utils.*"]
